PA3/tests/bad/bad_decl.cl
class A {

};

class Main {
	x : Int;
	y : A <- self;
	self : Int;
	main() : SELF_TYPE {
		self
	};
	self() : SELF_TYPE {
		self
	};
};